next
----
-download_tag: New CloVR component to download a list of tags
-clusterBsmlPairwiseAlignments.pl: fixed documentation to display true name of bsmlSearchList parameter.
-prepare_paired_ends_for_velvet: will now auto detect format of input files if format is ambiguous.
-replace_config_keys: if a var is found that has no value (ie. is blank), replace_config_keys will still replace the var with blank within the config.
-SavedPipeline.pm: Now supports <INCLUDE elements for including other pipelines
-overlap_analysis: non-iterative analysis (still contains iterator for post-processing). Made speed improvements to script.
-tag_data: new component (designed for use in CloVR)
-move_hmmpfam_results.pl: now handles htab with no model name in column 6
-prepare_paired_ends_for_velvet: new component
-velvet_optimiser: now allows an arbitrary number of input files
-create_amoscmp_input: new component
-identify_human_contaminants: new component
-rrna_hmm_fs: new component
-metagene: fixed bug in metagene2bsml.pl script where a zero orf count would cause ungraceful termination
-crossbow: new componet for short-read mapping. Designed for use with a hadoop cluster
-celera_assembler_mer: new component use for hybrid assemblies. Designed for use in cloud (non shared) environments
-velvet_optimser: new component
-celera2hawkeye: new component
-celera_assembler_cloud: updated to fix bug where stderr was being written to a non-existant folder
-amoscmp: new component
-sfffile: new component
-nucmer: new component
-celera_assembler: added cloud variants to component
-uclust: new component
-metagene: moved dtdvalidation into an iterator to handle multiple bsml output produced by metagene.
-split_multifasta: added support for 'total_files' parameter that allows user to specify the exact amount of output files wanted
-translate_sequence: updated to make use of the Fasta::SimpleIndexer module for sequence lookups.
-sffinfo: new component