@@ -41,4 +41,5 @@ $;PIPELINE_XML$; =
 $;PIPELINEID$; =
 
 [include]
+$;USER_CONFIG$;=
 $;PROJECT_CONFIG$;=
